# KleeTool

./: .clang-format  .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  LICENSE  ModifyLLVM.cpp  ModifyLLVM.h  README.md  SearchC.h  main.cpp
cmake/: add_components.cmake  find_boost.cmake  find_llvm.cmake  string_to_list.cmake
include/: CmdLine.h  Controller.h  Headers.h  Help.h  JsonParser.h  ModifyLLVM.h  ToolHandler.h  Version.h
src/: CmdLine.cpp  Controller.cpp  Help.cpp  JsonParser.cpp  ModifyLLVM.cpp  README.md  SearchC.cpp  ToolHandler.cpp  main.cpp
