cmake_minimum_required(VERSION 3.16)
project(KleeTool)

set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Threads)
#FIND_PACKAGE(LLVM REQUIRED CONFIG)

#设定可执行二进制文件的目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#设定存放编译出来的库文件的目录
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#并且把该目录设为连接目录
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

#设定头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#增加源代码文件夹
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_FILES)

ADD_EXECUTABLE(KleeTool ${SRC_FILES})
TARGET_LINK_LIBRARIES(KleeTool ${CMAKE_THREAD_LIBS_INIT})